# bovheat

./: .gitignore  LICENSE  LICENSE.txt  README.md  THIRDPARTYNOTICES.txt  codecov.yml  mkdocs.yml  pyproject.toml
.github/workflows/: pylint.yml  startup_test.yml  test_build.yml
bovheat_src/: bh_input.py  bh_output.py  bovheat.py
data/schema_50days/: Cows_13.1. - 27.1.xlsx  Cows_5.3. - 12.3.xls
data/schema_weekly/: February 11 2019.xlsx
docs/: index.md  mkdocs.md
docs/about/: about.md  license.md
example/data/schema_50days/: Cows_29.12. - 12.1.xlsx
example/data/schema_weekly/: February 18 2019.xlsx  February 25 2019.xlsx  February 4 2019.xlsx
tests/: test_calc_calving_date.py  test_peakcalculation.py  test_read_sourcedata_and_clean.py  test_validate_results.py
tests/data/Test3_malformed/: text_malformed.xlsx
tests/integration/: test_validate_results.py
tests/integration/test_validate_results/: validated_results.xlsx
tests/test_read_sourcedata_and_clean/Test2_ger_xls/: excel_ger.xls
tests/unit/: test_calc_calving_date.py  test_peakcalculation.py  test_read_sourcedata_and_clean.py
