[tool.poetry]
name = "BovHEAT"
version = "1.2.0"
description = """Bovine Heat Detection and Analysis Tool (BovHEAT) - Automated Heat detection and analysis tool for "SCR Heatime" (SCR Engineers Ltd., Netanya, Israel) a neck-mounted accelerometer for automated activity monitoring in cows. This tool analyses the raw data and performs error detection and correction. Additional data sources will be supported in the future."""
authors = ["Jan-Lukas Plenio <jan-lukas@plen.io>", "Alexander Bartel <alexander.bartel@fu-berlin.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bovheat/bovheat"
keywords = ["dairy cow", "heat detection", "precision livestock farming", "animal reproduction"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bovheat/bovheat/issues"
"IVEB, Freie Universität Berlin" = "https://www.vetmed.fu-berlin.de/en/einrichtungen/institute/we16/index.html"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
xlrd = "2.0.1"
xlsxwriter = "^1.2.8"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
## Optional dev dependencies must be specified under dependencies
pytest = { version = "^5.4.1", optional = true }
pytest-cov = { version = "^2.8.1", optional = true }
mkdocs = { version = "^1.1", optional = true }
pylint = { version = "^2.4.4", optional = true }
pyinstaller = {version = "4.10", optional = true}
pywin32-ctypes = { version = "^0.2.0", optional = true }
pefile = { version = "^2019.4.18", optional = true }
macholib = { version = "^1.14", optional = true }
mkdocs-material = { version = "^5.1.4", optional = true }
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ipykernel = "^5.2.1"

[tool.poetry.extras]
pytest-testing = ["pytest", "pytest-cov"]
pylint = ["pylint"]
pyinstaller = ["pyinstaller", "pywin32-ctypes", "pefile", "macholib"]
docs = ["mkdocs"]
docs_material = ["mkdocs-material"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
